load file dataset, tmp read

--- a/hw-05.ipynb
+++ b/hw-05.ipynb
@@ -43,7 +43,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6462"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = FOLDER_NAME.glob('**/*.csv')\n",
+    "files = [x for x in p if x.is_file()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +73,285 @@
     "#     print(\"Error: file not found\")\n",
     "#     raise ValueError\n",
     "\n",
-    "# df.head()"
+    "# df.head()\n",
+    "\n",
+    "def read_csv(path):\n",
+    "    df = pd.read_csv(path, header=0)\n",
+    "    if len(df) == 0:\n",
+    "        print(\"Error: file not found\")\n",
+    "        raise ValueError\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[WindowsPath('content/data'), WindowsPath('content/data/idle'), WindowsPath('content/data/running'), WindowsPath('content/data/stairs'), WindowsPath('content/data/walking')]\n",
+      "content\\data\\idle\\idle-1.csv\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>accelerometer_X</th>\n",
+       "      <th>accelerometer_Y</th>\n",
+       "      <th>accelerometer_Z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.000776</td>\n",
+       "      <td>4.616021</td>\n",
+       "      <td>8.576031</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.718261</td>\n",
+       "      <td>4.209007</td>\n",
+       "      <td>8.446744</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.909797</td>\n",
+       "      <td>-0.282516</td>\n",
+       "      <td>9.203311</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5.099650</td>\n",
+       "      <td>0.148441</td>\n",
+       "      <td>8.418014</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.762132</td>\n",
+       "      <td>-0.162806</td>\n",
+       "      <td>9.251195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>-0.086191</td>\n",
+       "      <td>-0.148441</td>\n",
+       "      <td>9.787497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>-0.062249</td>\n",
+       "      <td>-0.191536</td>\n",
+       "      <td>9.773131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>-0.057461</td>\n",
+       "      <td>-0.114922</td>\n",
+       "      <td>9.763555</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>-0.124498</td>\n",
+       "      <td>-0.162806</td>\n",
+       "      <td>9.782708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>-0.138864</td>\n",
+       "      <td>-0.124498</td>\n",
+       "      <td>9.768343</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>-0.095768</td>\n",
+       "      <td>-0.129287</td>\n",
+       "      <td>9.773131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>-0.114922</td>\n",
+       "      <td>-0.134075</td>\n",
+       "      <td>9.782708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>-0.114922</td>\n",
+       "      <td>-0.134075</td>\n",
+       "      <td>9.744401</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>-0.090980</td>\n",
+       "      <td>-0.143652</td>\n",
+       "      <td>9.773131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>-0.095768</td>\n",
+       "      <td>-0.129287</td>\n",
+       "      <td>9.782708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>-0.105345</td>\n",
+       "      <td>-0.114922</td>\n",
+       "      <td>9.763555</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>-0.148441</td>\n",
+       "      <td>-0.148441</td>\n",
+       "      <td>9.787497</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>-0.134075</td>\n",
+       "      <td>-0.105345</td>\n",
+       "      <td>9.773131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>-0.100556</td>\n",
+       "      <td>-0.124498</td>\n",
+       "      <td>9.763555</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>-0.081403</td>\n",
+       "      <td>-0.110133</td>\n",
+       "      <td>9.744401</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>-0.124498</td>\n",
+       "      <td>-0.153229</td>\n",
+       "      <td>9.773131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>-0.320823</td>\n",
+       "      <td>-0.191536</td>\n",
+       "      <td>9.792285</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>0.148441</td>\n",
+       "      <td>-0.234632</td>\n",
+       "      <td>9.768343</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>0.407014</td>\n",
+       "      <td>0.023942</td>\n",
+       "      <td>9.806650</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>-0.311246</td>\n",
+       "      <td>-0.167594</td>\n",
+       "      <td>9.768343</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>-0.038307</td>\n",
+       "      <td>-0.244209</td>\n",
+       "      <td>9.782708</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>-0.114922</td>\n",
+       "      <td>-0.158017</td>\n",
+       "      <td>9.801862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>-0.124498</td>\n",
+       "      <td>-0.114922</td>\n",
+       "      <td>9.758766</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>-0.167594</td>\n",
+       "      <td>-0.124498</td>\n",
+       "      <td>9.667787</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>-0.119710</td>\n",
+       "      <td>-0.124498</td>\n",
+       "      <td>9.792285</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    accelerometer_X  accelerometer_Y  accelerometer_Z\n",
+       "0          1.000776         4.616021         8.576031\n",
+       "1          0.718261         4.209007         8.446744\n",
+       "2         -0.909797        -0.282516         9.203311\n",
+       "3          5.099650         0.148441         8.418014\n",
+       "4          1.762132        -0.162806         9.251195\n",
+       "5         -0.086191        -0.148441         9.787497\n",
+       "6         -0.062249        -0.191536         9.773131\n",
+       "7         -0.057461        -0.114922         9.763555\n",
+       "8         -0.124498        -0.162806         9.782708\n",
+       "9         -0.138864        -0.124498         9.768343\n",
+       "10        -0.095768        -0.129287         9.773131\n",
+       "11        -0.114922        -0.134075         9.782708\n",
+       "12        -0.114922        -0.134075         9.744401\n",
+       "13        -0.090980        -0.143652         9.773131\n",
+       "14        -0.095768        -0.129287         9.782708\n",
+       "15        -0.105345        -0.114922         9.763555\n",
+       "16        -0.148441        -0.148441         9.787497\n",
+       "17        -0.134075        -0.105345         9.773131\n",
+       "18        -0.100556        -0.124498         9.763555\n",
+       "19        -0.081403        -0.110133         9.744401\n",
+       "20        -0.124498        -0.153229         9.773131\n",
+       "21        -0.320823        -0.191536         9.792285\n",
+       "22         0.148441        -0.234632         9.768343\n",
+       "23         0.407014         0.023942         9.806650\n",
+       "24        -0.311246        -0.167594         9.768343\n",
+       "25        -0.038307        -0.244209         9.782708\n",
+       "26        -0.114922        -0.158017         9.801862\n",
+       "27        -0.124498        -0.114922         9.758766\n",
+       "28        -0.167594        -0.124498         9.667787\n",
+       "29        -0.119710        -0.124498         9.792285"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print([item for item in FOLDER_NAME.glob('**/*') if item.is_dir() and item.name != FOLDER_NAME.name])\n",
+    "\n",
+    "print(files[0])\n",
+    "df = read_csv(files[0])\n",
+    "df"
    ]
   },
   {
