--- a/HW-08.ipynb
+++ b/HW-08.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "il_0_5OyUSNR"
    },
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "id": "cd-1_abTUSNS"
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -93,16 +93,7 @@
     "id": "pGTXiRyTUSNT",
     "outputId": "68f5b9d9-6c78-4bda-b26f-69aa82e93f20"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
-      "11490434/11490434 [==============================] - 0s 0us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# from tensorflow.keras.datasets import mnist\n",
     "from keras.datasets import mnist\n",
@@ -126,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "FkRmCQjnUSNV"
    },
@@ -154,23 +145,27 @@
     "    super().__init__(name=name)\n",
     "    # Перший шар, який складається з 128 нейронів\n",
     "    # Місце для вашого коду\n",
+    "    self.layer_1 = DenseLayer(in_features=num_features, out_features=n_hidden_1, name=\"Layer1\")\n",
     "    # Другий шар, який складається з 256 нейронів\n",
     "    # Місце для вашого коду\n",
+    "    self.layer_2 = DenseLayer(in_features=n_hidden_1, out_features=n_hidden_2, name=\"Layer2\")\n",
     "    # Вихідний шар\n",
     "    # Місце для вашого коду\n",
+    "    self.layer_3 = DenseLayer(in_features=n_hidden_2, out_features=num_classes, name=\"Output\")\n",
     "\n",
     "\n",
     "  def __call__(self, x):\n",
     "    # Передача даних через перші два шари та вихідний шар з функцією активації softmax\n",
-    "    x = # Місце для вашого коду\n",
+    "    # Місце для вашого коду\n",
+    "    x = self.layer_1(x)\n",
+    "    x = self.layer_2(x)\n",
     "\n",
-    "\n",
-    "    return # Місце для вашого коду"
+    "    return self.layer_3(x, activation=tf.nn.softmax) # Місце для вашого коду"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "id": "LIf3o7VAUSNV"
    },
@@ -190,12 +185,18 @@
     "# Як метрику якості використовуємо точність\n",
     "def accuracy(y_pred, y_true):\n",
     "    # Місце для вашого коду\n",
-    "    # ..."
+    "    y_pred_labels = tf.cast(tf.argmax(y_pred, axis=1), tf.float64)\n",
+    "\n",
+    "    correct_predict = tf.equal(y_pred_labels, tf.cast(y_true, tf.float64))\n",
+    "\n",
+    "    accuracy = tf.reduce_mean(tf.cast(correct_predict, tf.float64))\n",
+    "\n",
+    "    return accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "id": "MQeT1yatUSNW"
    },
@@ -216,20 +217,60 @@
     "\n",
     "    # Отримаємо список оптимізованих параметрів\n",
     "    # Місце для вашого коду\n",
+    "    gradients = g.gradient(loss, neural_net.trainable_variables)\n",
     "    # Обчислимо за ними значення градієнта\n",
     "    # Місце для вашого коду\n",
+    "    optimizer.apply_gradients(zip(gradients, neural_net.trainable_variables))\n",
     "\n",
     "    # Модифікуємо параметри\n",
-    "    # Місце для вашого коду"
+    "    # Місце для вашого коду\n",
+    "    # optimizer.minimize(loss, neural_net.trainable_variables)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "id": "fnyns9lBfpQZ"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step: 100, Loss:   52.43, Accuracy: 94.92%\n",
+      "Step: 200, Loss:   28.73, Accuracy: 96.09%\n",
+      "Step: 300, Loss:   54.30, Accuracy: 92.58%\n",
+      "Step: 400, Loss:   61.21, Accuracy: 91.41%\n",
+      "Step: 500, Loss:   35.37, Accuracy: 95.70%\n",
+      "Step: 600, Loss:   51.12, Accuracy: 94.14%\n",
+      "Step: 700, Loss:   25.44, Accuracy: 96.88%\n",
+      "Step: 800, Loss:   41.69, Accuracy: 95.70%\n",
+      "Step: 900, Loss:   29.26, Accuracy: 96.88%\n",
+      "Step: 1000, Loss:   34.55, Accuracy: 96.88%\n",
+      "Step: 1100, Loss:   23.64, Accuracy: 96.48%\n",
+      "Step: 1200, Loss:   19.66, Accuracy: 97.66%\n",
+      "Step: 1300, Loss:   33.70, Accuracy: 97.27%\n",
+      "Step: 1400, Loss:   22.52, Accuracy: 97.66%\n",
+      "Step: 1500, Loss:   41.22, Accuracy: 95.70%\n",
+      "Step: 1600, Loss:   24.44, Accuracy: 97.27%\n",
+      "Step: 1700, Loss:   30.26, Accuracy: 96.48%\n",
+      "Step: 1800, Loss:   38.38, Accuracy: 96.88%\n",
+      "Step: 1900, Loss:   31.62, Accuracy: 96.48%\n",
+      "Step: 2000, Loss:   26.99, Accuracy: 96.48%\n",
+      "Step: 2100, Loss:   27.73, Accuracy: 97.27%\n",
+      "Step: 2200, Loss:   39.92, Accuracy: 95.70%\n",
+      "Step: 2300, Loss:   36.08, Accuracy: 94.53%\n",
+      "Step: 2400, Loss:   37.32, Accuracy: 95.70%\n",
+      "Step: 2500, Loss:   25.43, Accuracy: 96.88%\n",
+      "Step: 2600, Loss:   35.75, Accuracy: 95.70%\n",
+      "Step: 2700, Loss:   23.34, Accuracy: 96.88%\n",
+      "Step: 2800, Loss:   50.97, Accuracy: 96.48%\n",
+      "Step: 2900, Loss:   40.01, Accuracy: 96.09%\n",
+      "Step: 3000, Loss:   49.17, Accuracy: 93.36%\n"
+     ]
+    }
+   ],
    "source": [
     "# Тренування мережі\n",
     "\n",
@@ -242,10 +283,18 @@
     "for step, (batch_x, batch_y) in enumerate(train_data.take(training_steps), 1):\n",
     "    # Оновлюємо ваги нейронної мережі\n",
     "    # Місце для вашого коду\n",
+    "    train(neural_net, batch_x, batch_y)\n",
     "\n",
     "    if step % display_step == 0:\n",
     "        pred = neural_net(batch_x)\n",
-    "        # Місце для вашого коду\n"
+    "        # Місце для вашого коду\n",
+    "        loss_step = cross_entropy(pred, batch_y)\n",
+    "        accuracy_step = accuracy(pred, batch_y)\n",
+    "\n",
+    "        loss_history.append(loss_step)\n",
+    "        accuracy_history.append(accuracy_step)\n",
+    "\n",
+    "        print(f\"Step: {step}, Loss: {loss_step:7.2f}, Accuracy: {accuracy_step:.2%}\")\n"
    ]
   },
   {
@@ -320,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
