--- a/HW-10.ipynb
+++ b/HW-10.ipynb
@@ -1509,7 +1509,7 @@
           "output_type": "stream",
           "text": [
             "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m128s\u001b[0m 433ms/step - accuracy: 0.9219 - loss: 0.2186\n",
-	"Test accuracy: 0.9218999743461609\n"
+            "Test accuracy: 0.9218999743461609\n"
           ]
         }
       ],
@@ -1525,9 +1525,15 @@
         "id": "rcbDxqKdJZFU"
       },
       "source": [
-        "RESUME\n",
+        "RESUME"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "У данному випадку модєль з початку має достатьню точність але після виялення ознак та донавчавння отрималли точність 0.92.\n",
-        "Але час який був на це затрачений дужє великій (В мене декілька разів завісало - і почінати з початку дуже болістно). Як що порівняти з першою частіною завдання - затрачений час не вартий 0,010 "
+        "Але час який був на це затрачений дужє великій (В мене декілька разів завісало - і почінати з початку дуже болістно). Як що порівняти з першою частіною завдання - затрачений час не вартий 0,003%  (Мабуть я щось зробив не так як требв, або це на данному датасеті так працює. Як що такі алгорітми працювання з нейронимі мережамі існує - то це не просто так)\n"
       ]
     }
   ],
