--- a/HW-12.ipynb
+++ b/HW-12.ipynb
@@ -34,13 +34,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Підготовка тексту"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -77,6 +70,13 @@
     "from string import punctuation\n",
     "\n",
     "spacy_punctuation = set(str(symbol) for symbol in nlp(\" \".join([symbol for symbol in punctuation])) if symbol.is_punct)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Підготовка тексту"
    ]
   },
   {
@@ -437,8 +437,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Підготовка тексту"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -476,17 +483,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
-    "words_not_use = stop_words.union(punctuation)\n",
-    "# words_not_use = spacy.lang.en.STOP_WORDS.union(punctuation)\n",
+    "words_not_used = stop_words.union(punctuation)\n",
+    "# words_not_used = spacy.lang.en.STOP_WORDS.union(punctuation)\n",
     "\n",
     "word_frequencies = {}\n",
     "for word in tokens:\n",
     "  word_lower = word.lower()\n",
-    "  if word_lower in words_not_use:\n",
+    "  if word_lower in words_not_used:\n",
     "    continue  \n",
     "  word_frequencies.setdefault(word_lower, 0)\n",
     "  word_frequencies[word_lower] += 1"
@@ -494,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +703,7 @@
        " ('sound', 1)]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +770,7 @@
        " 'In addition, Discovery was vital to the construction of the International Space Station (ISS); she flew thirteen of the thirty-seven total missions flown to the station by a U.S. Space Shuttle.']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,6 +778,65 @@
    "source": [
     "summary_nltk = nlargest(5, sentence_scores, key=sentence_scores.get)\n",
     "summary_nltk"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[The Orbiter Discovery, OV-103, is considered eligible for listing in the National Register of Historic Places (NRHP) in the context of the U.S. Space Shuttle Program (1969-2011) under Criterion A in the areas of Space Exploration and Transportation and under Criterion C in the area of Engineering.,\n",
+       " Under Criterion A, Discovery is significant as the oldest of the three extant orbiter vehicles constructed for the Space Shuttle Program (SSP), the longest running American space program to date; she was the third of five orbiters built by NASA.,\n",
+       " In addition, Discovery was vital to the construction of the International Space Station (ISS); she flew thirteen of the thirty-seven total missions flown to the station by a U.S. Space Shuttle.,\n",
+       " According to Wayne Hale, a flight director from Johnson Space Center, the Space Shuttle orbiter represents a “huge technological leap from expendable rockets and capsules to a reusable, winged, hypersonic, cargo-carrying spacecraft.”,\n",
+       " Including her maiden voyage (launched August 30, 1984), Discovery flew to space thirty-nine times, more than any of the other four orbiters; she was also the first orbiter to fly twenty missions.]"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summary_spaCy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "## spaCy summary : <br> <h4>The Orbiter Discovery, OV-103, is considered eligible for listing in the National Register of Historic Places (NRHP) in the context of the U.S. Space Shuttle Program (1969-2011) under Criterion A in the areas of Space Exploration and Transportation and under Criterion C in the area of Engineering. Under Criterion A, Discovery is significant as the oldest of the three extant orbiter vehicles constructed for the Space Shuttle Program (SSP), the longest running American space program to date; she was the third of five orbiters built by NASA. In addition, Discovery was vital to the construction of the International Space Station (ISS); she flew thirteen of the thirty-seven total missions flown to the station by a U.S. Space Shuttle. According to Wayne Hale, a flight director from Johnson Space Center, the Space Shuttle orbiter represents a “huge technological leap from expendable rockets and capsules to a reusable, winged, hypersonic, cargo-carrying spacecraft.” Including her maiden voyage (launched August 30, 1984), Discovery flew to space thirty-nine times, more than any of the other four orbiters; she was also the first orbiter to fly twenty missions.</h4>  <h2> nltk  summary: </h2> <h4>According to Wayne Hale, a flight director from Johnson Space Center, the Space Shuttle orbiter represents a “huge technological leap from expendable rockets and capsules to a reusable, winged, hypersonic, cargo-carrying spacecraft.” Although her base structure followed a conventional aircraft design, she used advanced materials that both minimized her weight for cargo-carrying purposes and featured low thermal expansion ratios, which provided a stable base for her Thermal Protection System (TPS) materials. The Orbiter Discovery, OV-103, is considered eligible for listing in the National Register of Historic Places (NRHP) in the context of the U.S. Space Shuttle Program (1969-2011) under Criterion A in the areas of Space Exploration and Transportation and under Criterion C in the area of Engineering. Under Criterion A, Discovery is significant as the oldest of the three extant orbiter vehicles constructed for the Space Shuttle Program (SSP), the longest running American space program to date; she was the third of five orbiters built by NASA. Including her maiden voyage (launched August 30, 1984), Discovery flew to space thirty-nine times, more than any of the other four orbiters; she was also the first orbiter to fly twenty missions. In addition, Discovery was vital to the construction of the International Space Station (ISS); she flew thirteen of the thirty-seven total missions flown to the station by a U.S. Space Shuttle.</h4>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# print(\"spaCy summary: \", \" \".join(str(i)for i in summary_spaCy), sep=\"\\n\")\n",
+    "# print(\"nltk summary: \", \"\\n\".join(summary_nltk), sep=\"\\n\", )\n",
+    "\n",
+    "from IPython.display import Markdown as md\n",
+    "\n",
+    "md(\"## spaCy summary : <br> <h4>\" + \" \".join(str(i) for i in summary_spaCy) + \"</h4>  <h2> nltk  summary: </h2> <h4>\" + \" \".join(summary_nltk) + \"</h4>\")\n"
    ]
   }
  ],
