--- a/HW-12.ipynb
+++ b/HW-12.ipynb
@@ -836,7 +836,7 @@
     "\n",
     "from IPython.display import Markdown as md\n",
     "\n",
-    "md(\"## spaCy summary : <br> <h4>\" + \" \".join(str(i) for i in summary_spaCy) + \"</h4>  <h2> nltk  summary: </h2> <h4>\" + \" \".join(summary_nltk) + \"</h4>\")\n"
+    "md(\"## spaCy summary : <br> <h4>\" + \" \".join(str(i) for i in summary_spaCy) + \"</h4>  <h2> nltk  summary: </h2> <h4>\" + \" \".join(summary_nltk) + \"</h4>\")"
    ]
   }
  ],
